# Automatic-Report-Generator

./: README.md  pyproject.toml
docs/: process_guide.md  skills_reference.md
prompts/checklists/: quality_checklist.md
prompts/system/: report_system_prompt.md
prompts/tasks/: report_generation_prompt.md
scripts/: collect_online_refs.py  dump_doc_text.py  extract_report_context.py  keyword_context.py  resolve_and_archive_online_refs.py  web_probe.py
src/report_generator/: __init__.py  cli.py  config.py  docx_export.py  evidence.py  ingest.py  models.py  pipeline.py  prompting.py  skills.py
tests/: test_docx_export.py  test_pipeline.py  test_resolve_online_refs.py  test_web_search_skill.py
